--- a/src/pages/programs/league-labs.astro
+++ b/src/pages/programs/league-labs.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import EmbedLoader from '../../../components/EmbedLoader.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import EmbedLoader from '../../components/EmbedLoader.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
 
 // Data that has iteration - moved as structures
 const leagueLabsTopics = [
