Fix import paths in summer 2025 camp page for correct component resolution

--- a/src/pages/camps/summer-2025.astro
+++ b/src/pages/camps/summer-2025.astro
@@ -1,10 +1,10 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import Section from '../../../components/Section.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
-import CampTrackCard from '../../../components/CampTrackCard.astro';
-import CampSessionCard from '../../../components/CampSessionCard.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import Section from '../../components/Section.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
+import CampTrackCard from '../../components/CampTrackCard.astro';
+import CampSessionCard from '../../components/CampSessionCard.astro';
 
 const phoneHref = '6198897571';
 
