--- a/src/pages/about/policies.astro
+++ b/src/pages/about/policies.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "../../../layouts/BaseLayout.astro";
-import SectionHeader from "../../../components/SectionHeader.astro";
-import Section from "../../../components/Section.astro";
-import HeroSection from "../../../components/HeroSection.astro";
-import PolicyTopicCards from "../../../components/PolicyTopicCards.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro";
+import SectionHeader from "../../components/SectionHeader.astro";
+import Section from "../../components/Section.astro";
+import HeroSection from "../../components/HeroSection.astro";
+import PolicyTopicCards from "../../components/PolicyTopicCards.astro";
 ---
 
 <BaseLayout
