--- a/src/pages/camps/summer-camps-2024.astro
+++ b/src/pages/camps/summer-camps-2024.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
-import CampSessionCard from '../../../components/CampSessionCard.astro';
-import HeroSection from '../../../components/HeroSection.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
+import CampSessionCard from '../../components/CampSessionCard.astro';
+import HeroSection from '../../components/HeroSection.astro';
 
 const phoneHref = '6198897571';
 
