--- a/src/pages/programs/classes.astro
+++ b/src/pages/programs/classes.astro
@@ -1,13 +1,13 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import Section from '../../../components/Section.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
-import ProgramCard from '../../../components/ProgramCard.astro';
-import CardBody from '../../../components/CardBody.astro';
-import CardFooter from '../../../components/CardFooter.astro';
-import CardGrid from '../../../components/CardGrid.astro';
-import LevelCard from '../../../components/LevelCard.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import Section from '../../components/Section.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
+import ProgramCard from '../../components/ProgramCard.astro';
+import CardBody from '../../components/CardBody.astro';
+import CardFooter from '../../components/CardFooter.astro';
+import CardGrid from '../../components/CardGrid.astro';
+import LevelCard from '../../components/LevelCard.astro';
 
 const courseLevels = [
   {
