--- a/src/pages/programs/tech-club.astro
+++ b/src/pages/programs/tech-club.astro
@@ -1,13 +1,13 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import UpcomingEvents from '../../../components/UpcomingEvents.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
-import HeroSection from '../../../components/HeroSection.astro';
-import Section from '../../../components/Section.astro';
-import CardGrid from '../../../components/CardGrid.astro';
-import ProgramCard from '../../../components/ProgramCard.astro';
-import CardBody from '../../../components/CardBody.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import UpcomingEvents from '../../components/UpcomingEvents.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
+import HeroSection from '../../components/HeroSection.astro';
+import Section from '../../components/Section.astro';
+import CardGrid from '../../components/CardGrid.astro';
+import ProgramCard from '../../components/ProgramCard.astro';
+import CardBody from '../../components/CardBody.astro';
 
 const donationScript =
   'https://secure.givelively.org/widgets/simple_donation/the-league-of-amazing-programmers.js?show_suggested_amount_buttons=true&show_in_honor_of=false&address_required=false&has_required_custom_question=null&suggested_donation_amounts[]=250&suggested_donation_amounts[]=125&suggested_donation_amounts[]=100&suggested_donation_amounts[]=50';
