--- a/src/pages/camps.astro
+++ b/src/pages/camps.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import SectionHeader from '../../components/SectionHeader.astro';
-import CalloutCard from '../../components/CalloutCard.astro';
-import CampTrackCard from '../../components/CampTrackCard.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import SectionHeader from '../components/SectionHeader.astro';
+import CalloutCard from '../components/CalloutCard.astro';
+import CampTrackCard from '../components/CampTrackCard.astro';
 
 const phoneHref = '6198897571';
 
