--- a/src/pages/camps/summer-camp.astro
+++ b/src/pages/camps/summer-camp.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../components/SectionHeader.astro';
-import CalloutCard from '../../../components/CalloutCard.astro';
-import CampSessionCard from '../../../components/CampSessionCard.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import SectionHeader from '../../components/SectionHeader.astro';
+import CalloutCard from '../../components/CalloutCard.astro';
+import CampSessionCard from '../../components/CampSessionCard.astro';
 
 const phoneHref = '6198897571';
 
