--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../../layouts/BaseLayout.astro';
-import HeroSection from '../../components/HeroSection.astro';
-import SectionHeader from '../../components/SectionHeader.astro';
-import CalloutCard from '../../components/CalloutCard.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
+import HeroSection from '../components/HeroSection.astro';
+import SectionHeader from '../components/SectionHeader.astro';
+import CalloutCard from '../components/CalloutCard.astro';
 
 
 
