--- a/src/pages/programs/classes/java.astro
+++ b/src/pages/programs/classes/java.astro
@@ -1,8 +1,8 @@
 ---
-import BaseLayout from '../../../../layouts/BaseLayout.astro';
-import SectionHeader from '../../../../components/SectionHeader.astro';
-import PikeWidget from '../../../../components/PikeWidget.astro';
-import CalloutCard from '../../../../components/CalloutCard.astro';
+import BaseLayout from '../../../layouts/BaseLayout.astro';
+import SectionHeader from '../../../components/SectionHeader.astro';
+import PikeWidget from '../../../components/PikeWidget.astro';
+import CalloutCard from '../../../components/CalloutCard.astro';
 
 const heroHighlights = [
   'Head start on AP Computer Science and college courses',
