--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,7 +51,7 @@ import Section_40_60 from "../components/Section_40_60.astro";
     </SectionHeader>
     <CardGrid min-width={320}>
       <ProgramCard img="/images/python_header.png" alt="Illustration representing Python coding">
-        <CardBody eyebrow="BEGINNER">
+        <CardBody eyebrow="BEGINNER TO INTERMEDIATE">
           <h2 slot="title">Python Coding Classes</h2>
           <description
             >Python is the best language to start with. It's the most popular
