Add new images for program cards and update references in index and programs pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ import Section_40_60 from "../components/Section_40_60.astro";
       </p>
     </SectionHeader>
     <CardGrid min-width={320}>
-      <ProgramCard img="/images/python_header.png" alt="Illustration representing Python coding">
+      <ProgramCard img="/images/cards/python.png" alt="Illustration representing Python coding">
         <CardBody eyebrow="BEGINNER TO INTERMEDIATE">
           <h2 slot="title">Python Coding Classes</h2>
           <description
@@ -90,7 +90,7 @@ import Section_40_60 from "../components/Section_40_60.astro";
           >
         </CardFooter>
       </ProgramCard>
-      <ProgramCard img="/images/java_header.png" alt="Illustration representing Java development">
+      <ProgramCard img="/images/cards/java.png" alt="Illustration representing Java development">
         <CardBody eyebrow="BEGINNER TO ADVANCED">
           <h2 slot="title">Java Coding Classes</h2>
           <description
@@ -145,7 +145,7 @@ import Section_40_60 from "../components/Section_40_60.astro";
       </p>
     </SectionHeader>
     <CardGrid min-width={320}>
-      <ProgramCard img="/images/current_students.png" alt="Students attending Tech Club workshop">
+      <ProgramCard img="/images/cards/league_code.png" alt="">
         <CardBody eyebrow="BEGINNER TO INTERMEDIATE">
           <h2 slot="title">Free Tech Club</h2>
           <description
@@ -179,7 +179,7 @@ import Section_40_60 from "../components/Section_40_60.astro";
           >
         </CardFooter>
       </ProgramCard>
-      <ProgramCard img="/images/codingcamps.png" alt="Illustration of students collaborating on laptops">
+      <ProgramCard img="/images/cards/cpp.png" alt="">
         <CardBody eyebrow="INTERMEDIATE TO ADVANCED">
           <h2 slot="title">Code Clinic</h2>
           <description
