--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import CardBaseStyles from '../components/CardBaseStyles.astro';
 import '../styles/global.css';
 import '../styles/site.css';
 
@@ -24,6 +25,7 @@ const pageTitle = title === 'The League of Amazing Programmers' ? title : `${tit
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   </head>
   <body>
+    <CardBaseStyles />
     <Header />
     <main>
       <slot />
